--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -3,7 +3,7 @@
     <h1 id="title"> Atelier "La Ronde de Nuit"</h1>
     <h2 id="description">Restauration et Conservation de peintures anciennes</h2>
     <p id="item">
-      <ul>
+      <ul class="accueil">
         <%= link_to "La Restauratrice", restauratrice_path %>
         <%= link_to "Prestations", prestations_path %>
         <%= link_to "Galerie", galerie_path %>
