change css format

--- a/app/views/pages/restauratrice.html.erb
+++ b/app/views/pages/restauratrice.html.erb
@@ -1,38 +1,25 @@
-<div class="banner">
-           <div class="banner-content">
-               <h1 id="title"> Atelier "La Ronde de Nuit"</h1>
-               <h2 id="description">Restauration et Conservation de peintures anciennes</h2>
-               <p id="item">
-                   <ul>
-                       <a href="file:///Users/pierrebollack/Desktop/Dev/Atelier_la_ronde_de_nuit/index.html#">Accueil</a>
-                       <a href="file:///Users/pierrebollack/Desktop/Dev/Atelier_la_ronde_de_nuit/restauratrice.html#">La restauratrice</a>
-                       <a id="prestations" href="file:///Users/pierrebollack/Desktop/Dev/Atelier_la_ronde_de_nuit/prestations.html">Prestations</a>
-                       <a href="file:///Users/pierrebollack/Desktop/Dev/Atelier_la_ronde_de_nuit/galerie.html">Galerie</a>
-                       <a href="#">Devis</a>
-                       <a href="#">Contact</a>
-                   </ul>
-               </p>
-           </div>
-</div>
+<div class="restauratrice-container-global">
+  <%= render "shared/navbar" %>
 
-<div class="container">
+  <div class="container">
     <div class="restauratrice">
-        <div class="card-restauratrice">
-            <div class="card-restauratrice">
-            </div>
-        </div>
-        <div class="restauratrice-texte">
-            <h1 class="restauratrice-titre">La restauratrice</h1>
-            <p>
-                Formée à l’Atelier du Temps Passé aux meilleures techniques de restauration, membre de la SFIIC (Section Française de l’International Institute of Conservation) et après de nombreuses expériences en France et à l’international, <strong>Catherine Bollack</strong> a installé son atelier de restauration à Vaucresson pour favoriser une clientèle de proximité.<br><br>
-                Une restauration de tableau n’est pas une simple réparation, mais la volonté de sauver notre patrimoine en prodiguant soins et conseils en vue d’une excellente conservation des œuvres à l’avenir. Nous en sommes les garants.<br><br>
-                La devise de l’atelier : trouver pour chaque tableaux le juste équilibre entre l’éclat, la lisibilité et le respect de la patine du temps.<br><br>
-                Devis Gratuit – Déplacement sur rendez-vous
-            </p>
-        </div>
-        <div class="card-atelier">
-            <div class="card-atelier">
-            </div>
-        </div>
+      <div class="card-restauratrice">
+          <div class="card-restauratrice">
+          </div>
+      </div>
+      <div class="restauratrice-texte">
+          <h1 class="restauratrice-titre">La restauratrice</h1>
+          <p>
+              Formée à l’Atelier du Temps Passé aux meilleures techniques de restauration, membre de la SFIIC (Section Française de l’International Institute of Conservation) et après de nombreuses expériences en France et à l’international, <strong>Catherine Bollack</strong> a installé son atelier de restauration à Vaucresson pour favoriser une clientèle de proximité.<br><br>
+              Une restauration de tableau n’est pas une simple réparation, mais la volonté de sauver notre patrimoine en prodiguant soins et conseils en vue d’une excellente conservation des œuvres à l’avenir. Nous en sommes les garants.<br><br>
+              La devise de l’atelier : trouver pour chaque tableaux le juste équilibre entre l’éclat, la lisibilité et le respect de la patine du temps.<br><br>
+              Devis Gratuit – Déplacement sur rendez-vous
+          </p>
+      </div>
+      <div class="card-atelier">
+          <div class="card-atelier">
+          </div>
+      </div>
     </div>
+  </div>
 </div>
