--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -1,26 +1,28 @@
-<div class="banner">
-  <div class="banner-content">
-    <h1 id="title"> Atelier "La Ronde de Nuit"</h1>
-    <h2 id="description">Restauration et Conservation de peintures anciennes</h2>
-    <p id="item">
-      <ul class="accueil">
-        <%= link_to "La Restauratrice", restauratrice_path %>
-        <%= link_to "Prestations", prestations_path %>
-        <%= link_to "Galerie", galerie_path %>
-        <%= link_to "Devis", devis_path %>
-        <%= link_to "Contact", contact_path %>
-      </ul>
+<div class="home-container-global">
+  <div class="home-banner">
+    <div class="home-banner-content">
+      <h1 id="home-title"> Atelier "La Ronde de Nuit"</h1>
+      <h2 id="home-description">Restauration et Conservation de peintures anciennes</h2>
+      <p id="home-item">
+        <ul class="home-accueil">
+          <%= link_to "La Restauratrice", restauratrice_path %>
+          <%= link_to "Prestations", prestations_path %>
+          <%= link_to "Galerie", galerie_path %>
+          <%= link_to "Devis", devis_path %>
+          <%= link_to "Contact", contact_path %>
+        </ul>
+      </p>
+    </div>
+  </div>
+
+  <div class="home-footer">
+    <p>
+      Me contacter: <br>
+      Catherine Bollack <br>
+      Mail: catherine.nb@wanadoo.fr <br>
+      Tel: +33 6 63 00 74 35 <br>
+      <br>
+      Réalisation de devis gratuit - sur rendez-vous
     </p>
   </div>
-</div>
-
-<div id="footer">
-  <p>
-    Me contacter: <br>
-    Catherine Bollack <br>
-    Mail: catherine.nb@wanadoo.fr <br>
-    Tel: +33 6 63 00 74 35 <br>
-    <br>
-    Réalisation de devis gratuit - sur rendez-vous
-  </p>
 </div>
