--- a/app/views/pages/restauratrice.html.erb
+++ b/app/views/pages/restauratrice.html.erb
@@ -3,23 +3,17 @@
 
   <div class="container">
     <div class="restauratrice">
-      <div class="card-restauratrice">
-          <div class="card-restauratrice">
-          </div>
-      </div>
       <div class="restauratrice-texte">
-          <h1 class="restauratrice-titre">La restauratrice</h1>
           <p>
               Formée à l’Atelier du Temps Passé aux meilleures techniques de restauration, membre de la SFIIC (Section Française de l’International Institute of Conservation) et après de nombreuses expériences en France et à l’international, <strong>Catherine Bollack</strong> a installé son atelier de restauration à Vaucresson pour favoriser une clientèle de proximité.<br><br>
               Une restauration de tableau n’est pas une simple réparation, mais la volonté de sauver notre patrimoine en prodiguant soins et conseils en vue d’une excellente conservation des œuvres à l’avenir. Nous en sommes les garants.<br><br>
               La devise de l’atelier : trouver pour chaque tableaux le juste équilibre entre l’éclat, la lisibilité et le respect de la patine du temps.<br><br>
-              Devis Gratuit – Déplacement sur rendez-vous
           </p>
       </div>
-      <div class="card-atelier">
-          <div class="card-atelier">
-          </div>
-      </div>
+        <div class="card-restauratrice">
+          <img class="img-restauratrice" src="https://lh3.googleusercontent.com/proxy/Rrr3Psq-288_7YtnjrdS3-_zm6b9x4WL3blZF7LtPqpKj9Eg0r5Q9EDxIS_Jc2TTh8BivD0gF4qGgnN1ogm4UVEWKqmtjuoaEf2HoGqtYvwQTqH7USwvQVkl8AKiijdutQdJnpFwvrU">
+          <img class="" src="https://lh3.googleusercontent.com/proxy/Rrr3Psq-288_7YtnjrdS3-_zm6b9x4WL3blZF7LtPqpKj9Eg0r5Q9EDxIS_Jc2TTh8BivD0gF4qGgnN1ogm4UVEWKqmtjuoaEf2HoGqtYvwQTqH7USwvQVkl8AKiijdutQdJnpFwvrU">
+        </div>
     </div>
   </div>
 </div>
