--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,3 +1,20 @@
+.navbar-global {
+  text-align: center;
+  margin: 0 auto;
+}
+
+#navbar-description {
+  color: black;
+}
+
 #navbar-title {
   color: black;
+  margin: 0;
+}
+
+.trait_dessus
+{
+border-top: 1px solid black;
+width : 80%;
+margin: 0 auto;
 }
