--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,15 @@
 body {
   background-color: #f4ebe0;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+  opacity: 0.7;
+}
+
+a:hover {
+  opacity: 1;
+}
+
