--- a/app/assets/stylesheets/restauratrice.scss
+++ b/app/assets/stylesheets/restauratrice.scss
@@ -1,3 +1,25 @@
 .restauratrice-container-global {
   background-color: #f4ebe0;
 }
+
+.restauratrice-texte {
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  p {
+    color: black;
+    font-size: 20px;
+  }
+}
+
+.card-restauratrice {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px;
+  .img-restauratrice {
+    margin-right: 10px;
+  }
+}
