add form bootstrap

--- a/app/assets/stylesheets/accueil.scss
+++ b/app/assets/stylesheets/accueil.scss
@@ -49,9 +49,8 @@ p {
     margin-bottom: 30px;
 }
 .home-banner a {
-    color: white;
-    text-decoration: underline;
-    padding: 10px;
+    color: white !important;
+    padding: 10px !important;
 }
 
 .home-footer {
