--- a/app/views/pages/restauratrice.html.erb
+++ b/app/views/pages/restauratrice.html.erb
@@ -1,7 +1,7 @@
 <div class="restauratrice-container-global">
   <%= render "shared/navbar" %>
 
-  <div class="container">
+  <div class="container-restauratrice">
     <div class="restauratrice">
       <div class="restauratrice-texte">
           <p>
