--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,13 +3,13 @@ body {
 }
 
 a {
-  text-decoration: none;
-  color: black;
-  padding: 5px;
-  opacity: 0.7;
+  text-decoration: none !important;
+  color: black !important;
+  padding: 5px !important;
+  opacity: 0.7 !important;
 }
 
 a:hover {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
