--- a/app/views/pages/devis.html.erb
+++ b/app/views/pages/devis.html.erb
@@ -1,1 +1,20 @@
 <%= render "shared/navbar" %>
+
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="FullName">Nom Prénom</label>
+      <input type="FullName" class="form-control" id="FullName" aria-describedby="emailHelp" placeholder="Paul Mirabel">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">Nous ne partageons pas vos informations.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlFile1">Photo de votre tableau</label>
+      <input type="file" class="form-control-file" id="exampleFormControlFile1">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
