--- a/app/views/pages/devis.html.erb
+++ b/app/views/pages/devis.html.erb
@@ -1,14 +1,14 @@
 <%= render "shared/navbar" %>
 
-<div class="container">
+<div class="container py-3">
   <form>
     <div class="form-group">
       <label for="FullName">Nom Prénom</label>
-      <input type="FullName" class="form-control" id="FullName" aria-describedby="emailHelp" placeholder="Paul Mirabel">
+      <input type="FullName" class="form-control" id="FullName" aria-describedby="emailHelp" placeholder="Rembrandt Harmenszoon van Rijn">
     </div>
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <label for="exampleInputEmail1">Addresse mail</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="john@gmail.com">
       <small id="emailHelp" class="form-text text-muted">Nous ne partageons pas vos informations.</small>
     </div>
     <div class="form-group">
@@ -18,3 +18,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
+
+
