--- a/app/views/pages/galerie.html.erb
+++ b/app/views/pages/galerie.html.erb
@@ -1,1 +1,33 @@
 <%= render "shared/navbar" %>
+
+<div class="cards">
+
+  <div class="card-category">
+    <%= image_tag "femme_avant_apres.jpeg" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "maison_avant" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "maison_apres" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "methode1.jpeg" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "methode2.jpeg" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "methode3.jpeg" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "methode4.jpeg" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "Chiens" %>
+  </div>
+  <div class="card-category">
+    <%= image_tag "eponge bleu (1)" %>
+  </div>
+
+</div>
