--- a/app/views/pages/restauratrice.html.erb
+++ b/app/views/pages/restauratrice.html.erb
@@ -11,8 +11,8 @@
           </p>
       </div>
         <div class="card-restauratrice">
-          <img class="img-restauratrice" src="https://lh3.googleusercontent.com/proxy/Rrr3Psq-288_7YtnjrdS3-_zm6b9x4WL3blZF7LtPqpKj9Eg0r5Q9EDxIS_Jc2TTh8BivD0gF4qGgnN1ogm4UVEWKqmtjuoaEf2HoGqtYvwQTqH7USwvQVkl8AKiijdutQdJnpFwvrU">
-          <img class="" src="https://lh3.googleusercontent.com/proxy/Rrr3Psq-288_7YtnjrdS3-_zm6b9x4WL3blZF7LtPqpKj9Eg0r5Q9EDxIS_Jc2TTh8BivD0gF4qGgnN1ogm4UVEWKqmtjuoaEf2HoGqtYvwQTqH7USwvQVkl8AKiijdutQdJnpFwvrU">
+          <%= image_tag "eponge bleu (1).jpeg" %>
+          <%= image_tag "femme 1.jpeg" %>
         </div>
     </div>
   </div>
