--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,6 +1,7 @@
 .navbar-global {
   text-align: center;
   margin: 0 auto;
+  padding: 10px;
 }
 
 #navbar-description {
@@ -17,4 +18,8 @@
 border-top: 1px solid black;
 width : 80%;
 margin: 0 auto;
+}
+
+ul li {
+  display: inline-block;
 }
