--- a/app/assets/stylesheets/accueil.scss
+++ b/app/assets/stylesheets/accueil.scss
@@ -17,10 +17,11 @@ h2 {
   font-size: 20px;
 }
 
-p {
-    color: white;
-    font-family: roboto;
-    font-weight: lighter;
+.home-footer {
+  color: white;
+  font-family: roboto;
+  font-weight: lighter;
+  padding: 5px;
 }
 
 .home-accueil {
