--- a/app/views/pages/prestations.html.erb
+++ b/app/views/pages/prestations.html.erb
@@ -9,11 +9,11 @@
     <div class="prestation conservation">
 
       <div class="conservation-img">
-        <img src="https://www.connaissancedesarts.com/wp-content/thumbnails/uploads/2020/05/cda19_article_actu-operation-ronde-de-nuit-photo-gigapixels-tt-width-970-height-545-fill-1-crop-0-bgcolor-ffffff.jpg">
-      </div>
-      <div class="conservation-img-content">
-        <h3>Restauration Conservative:</h3>
-        <p>La restauration conservative définit l'ensemble des techniques visant à consolider, remettre en état le support et/ou la couche picturale.</p>
+        <%= image_tag "femme_avant_apres", alt: "alttext" %>
+        <div class="conservation-img-content">
+          <h3>Restauration Conservative:</h3>
+          <p>La restauration conservative définit l'ensemble des techniques visant à consolider, remettre en état le support et/ou la couche picturale.</p>
+        </div>
       </div>
 
       <div class="conservation-content">
@@ -46,23 +46,23 @@
         </ul>
       </div>
       <div class="esthetique-img">
-        <img src="https://www.connaissancedesarts.com/wp-content/thumbnails/uploads/2020/05/cda19_article_actu-operation-ronde-de-nuit-photo-gigapixels-tt-width-970-height-545-fill-1-crop-0-bgcolor-ffffff.jpg">
+        <%= image_tag "maison_avant", alt: "alttext" %>
       </div>
       <div class="esthetique-img-content">
         <h3>Restauration Esthétique :</h3>
-        <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p>
+        <!-- <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p> -->
       </div>
     </div>
 
     <div class="prestation preventive">
       <div class="preventive-img">
-        <img src="https://www.connaissancedesarts.com/wp-content/thumbnails/uploads/2020/05/cda19_article_actu-operation-ronde-de-nuit-photo-gigapixels-tt-width-970-height-545-fill-1-crop-0-bgcolor-ffffff.jpg">
+        <%= image_tag "maison_apres", alt: "alttext" %>
       </div>
-      <div class="preventive-img-content">
+<!--       <div class="preventive-img-content">
         <h3>Restauration Préventive :</h3>
         <p>La restauration préventive permet d’anticiper et/ou de réduire les dommages pouvant être causés par des facteurs externes (humidité, chaleur, choc, mauvais stockage)</p>
 
-      </div>
+      </div> -->
       <div class="preventive-content">
         <h3>Support toile et bois:</h3>
         <ul>
