--- a/app/views/pages/prestations.html.erb
+++ b/app/views/pages/prestations.html.erb
@@ -50,7 +50,7 @@
       </div>
       <div class="esthetique-img-content">
         <h3>Restauration Esthétique :</h3>
-        <!-- <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p> -->
+        <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p>
       </div>
     </div>
 
@@ -58,11 +58,11 @@
       <div class="preventive-img">
         <%= image_tag "maison_apres", alt: "alttext" %>
       </div>
-<!--       <div class="preventive-img-content">
+      <div class="preventive-img-content">
         <h3>Restauration Préventive :</h3>
         <p>La restauration préventive permet d’anticiper et/ou de réduire les dommages pouvant être causés par des facteurs externes (humidité, chaleur, choc, mauvais stockage)</p>
 
-      </div> -->
+      </div>
       <div class="preventive-content">
         <h3>Support toile et bois:</h3>
         <ul>
