--- a/app/assets/stylesheets/galerie.scss
+++ b/app/assets/stylesheets/galerie.scss
@@ -46,3 +46,39 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+
+.box {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  // border: 1px solid #eeeeee;
+  perspective: 1000px;
+}
+.box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  // text-align: center;
+  transition: transform .8s;
+  transform-style: preserve-3d;
+}
+.box:hover .box-inner {
+  transform: rotateX(180deg);
+}
+.box-front, .box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+// .box-front {
+//   background-color: #cccccc;
+//   color: #111111;
+// }
+.box-back {
+  // background-color: #8ebf42;
+  // color: #eeeeee;
+  transform: rotateX(180deg);
+}
+
