--- a/app/assets/stylesheets/prestations.scss
+++ b/app/assets/stylesheets/prestations.scss
@@ -7,8 +7,8 @@
   p {
     text-align: center;
     color: black;
-    font-size: 25px;
-    padding: 15px;
+    font-size: 23px;
+    padding: 22px;
   }
 }
 
@@ -37,6 +37,7 @@
   padding: 10px;
   h3 {
     text-align: center;
+    text-decoration: underline;
   }
 }
 
@@ -51,7 +52,9 @@
   position: absolute;
   color: white;
   text-align: center;
-  top: 100%;
+  top: 123%;
+  left: 55%;
+  width: 30%;
 }
 .esthetique-content {
   margin-right: 120px;
@@ -59,6 +62,7 @@
   padding: 10px;
   h3 {
     text-align: center;
+    text-decoration: underline;
   }
 }
 
@@ -75,8 +79,8 @@
   width: cover;
   width: 30%;
   text-align: center;
-  top: 55%;
-  right: 55%;
+  top: 190%;
+  right: 57%;
 }
 .preventive-content {
   margin-left: 120px;
@@ -84,5 +88,6 @@
   padding: 10px;
   h3 {
     text-align: center;
+    text-decoration: underline;
   }
 }
