--- a/app/views/pages/prestations.html.erb
+++ b/app/views/pages/prestations.html.erb
@@ -9,7 +9,7 @@
     <div class="prestation conservation">
 
       <div class="conservation-img">
-        <%= image_tag "femme_avant_apres", alt: "alttext" %>
+        <%= image_tag "restauration_conservatrice.JPG", alt: "alttext" %>
         <div class="conservation-img-content">
           <h3>Restauration Conservative:</h3>
           <p>La restauration conservative définit l'ensemble des techniques visant à consolider, remettre en état le support et/ou la couche picturale.</p>
@@ -64,7 +64,7 @@
 
       </div>
       <div class="preventive-content">
-        <h3>Support toile et bois:</h3>
+        <!-- <h3>Support toile et bois:</h3> -->
         <ul>
           <li>Protection des tranches de l’œuvre au moyen d’un bordage</li>
           <li>Agencement d’un système d’accrochage adapté</li>
