--- a/app/assets/stylesheets/restauratrice.scss
+++ b/app/assets/stylesheets/restauratrice.scss
@@ -10,6 +10,8 @@
   p {
     color: black;
     font-size: 20px;
+    margin-top: 15px;
+    margin-bottom: 0px;
   }
 }
 
@@ -19,7 +21,10 @@
   width: 80%;
   margin: 0 auto;
   padding: 10px;
-  .img-restauratrice {
+  img {
     margin-right: 10px;
+    width: 392px;
+    height: 480px;
+    object-fit: cover;
   }
 }
