--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -1,14 +1,13 @@
 <div class="home-container-global">
   <div class="home-banner">
     <div class="home-banner-content">
-      <h1 id="home-title"> Atelier "La Ronde de Nuit"</h1>
+      <h1 id="home-title"> <i>Atelier "La Ronde de Nuit"</i> </h1>
       <h2 id="home-description">Restauration et Conservation de peintures anciennes</h2>
       <p id="home-item">
         <ul class="home-accueil">
-          <%= link_to "La Restauratrice", restauratrice_path %>
+          <%= link_to "L'Atelier", restauratrice_path %>
           <%= link_to "Prestations", prestations_path %>
           <%= link_to "Galerie", galerie_path %>
-          <%= link_to "Devis", devis_path %>
           <%= link_to "Contact", contact_path %>
         </ul>
       </p>
