--- a/app/views/pages/prestations.html.erb
+++ b/app/views/pages/prestations.html.erb
@@ -1,26 +1,27 @@
 <%= render "shared/navbar" %>
 
 <div class="prestations-container-global">
+
   <div class="prestations-titre">
-    <p>L'Atelier "La Ronde de Nuit" effectue l'ensemble des prestations de la restauration-conservation:</p>
+    <p>L'Atelier "La Ronde de Nuit" effectue l'ensemble des prestations de la restauration-conservation</p>
   </div>
 
   <div class="prestations">
-    <div class="prestation conservation">
 
-      <div class="conservation-img">
-        <%= image_tag "restauration_conservatrice.JPG", alt: "alttext" %>
-        <div class="conservation-img-content">
-          <h3>Restauration Conservative:</h3>
-          <p>La restauration conservative définit l'ensemble des techniques visant à consolider, remettre en état le support et/ou la couche picturale.</p>
-        </div>
+  <div class="prestation conservation">
+    <div class="conservation-img">
+      <%= image_tag "presta", alt: "alttext" %>
+    </div>
+    <div class="conservation_img_content_global">
+      <div class="conservation-img-content">
+        <h3>Restauration Conservative</h3>
+        <p>La restauration conservative définit l'ensemble des techniques visant à consolider, remettre en état le support et/ou la couche picturale.</p>
       </div>
-
       <div class="conservation-content">
-        <h3>Support toile et bois:</h3>
+        <h3>Support toile et bois</h3>
         <ul>
           <li>Traitement du châssis, désinfection</li>
-          <li>Traitement de la toile:
+          <li>Traitement de la toile
             <ul>
               <li>Remise en planéité, reprise des déformations​</li>
               <li>Dé-restauration, retrait de pièces anciennes</li>
@@ -32,10 +33,18 @@
         </ul>
       </div>
     </div>
+  </div>
 
-    <div class="prestation esthetique">
+  <div class="trait_dessus_presta"></div>
+
+  <div class="prestation esthetique">
+    <div class="esthetique_global">
+      <div class="esthetique-img-content">
+        <h3>Restauration Esthétique</h3>
+        <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p>
+      </div>
       <div class="esthetique-content">
-        <h3>Couche picturale:</h3>
+        <h3>Couche picturale</h3>
         <ul>
           <li>Décrassage, nettoyage</li>
           <li>Allègement de vernis par voie chimique ou mécanique</li>
@@ -45,26 +54,24 @@
           <li>Pose de vernis de protection</li>
         </ul>
       </div>
-      <div class="esthetique-img">
-        <%= image_tag "maison_avant", alt: "alttext" %>
-      </div>
-      <div class="esthetique-img-content">
-        <h3>Restauration Esthétique :</h3>
-        <p>La restauration esthétique définit l’ensemble des traitements de la couche picturale visant à restituer la lisibilité de l’œuvre tout en respectant la patine du temps.</p>
-      </div>
     </div>
+    <div class="esthetique-img">
+      <%= image_tag "presta_1", alt: "alttext" %>
+    </div>
+  </div>
 
-    <div class="prestation preventive">
-      <div class="preventive-img">
-        <%= image_tag "maison_apres", alt: "alttext" %>
-      </div>
+  <div class="trait_dessus_presta"></div>
+
+  <div class="prestation preventive">
+    <div class="preventive-img">
+      <%= image_tag "presta_2", alt: "alttext" %>
+    </div>
+    <div class="preventive_global">
       <div class="preventive-img-content">
-        <h3>Restauration Préventive :</h3>
+        <h3>Restauration Préventive</h3>
         <p>La restauration préventive permet d’anticiper et/ou de réduire les dommages pouvant être causés par des facteurs externes (humidité, chaleur, choc, mauvais stockage)</p>
-
       </div>
       <div class="preventive-content">
-        <!-- <h3>Support toile et bois:</h3> -->
         <ul>
           <li>Protection des tranches de l’œuvre au moyen d’un bordage</li>
           <li>Agencement d’un système d’accrochage adapté</li>
@@ -73,6 +80,8 @@
         </ul>
       </div>
     </div>
+  </div>
 
   </div>
+
 </div>
