--- a/app/assets/stylesheets/restauratrice.scss
+++ b/app/assets/stylesheets/restauratrice.scss
@@ -1,7 +1,3 @@
-.restauratrice-container-global {
-  background-color: #f4ebe0;
-}
-
 .restauratrice-texte {
   text-align: center;
   width: 80%;
@@ -22,9 +18,49 @@
   margin: 0 auto;
   padding: 10px;
   img {
-    margin-right: 10px;
-    width: 392px;
+    width: 370px;
     height: 480px;
     object-fit: cover;
+  }
+}
+
+.card-restauratrice {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .card-restauratrice {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .card-restauratrice {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .card-restauratrice {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .card-restauratrice {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .card-restauratrice {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
