--- a/app/views/pages/galerie.html.erb
+++ b/app/views/pages/galerie.html.erb
@@ -1,47 +1,103 @@
 <%= render "shared/navbar" %>
 
-<div class="cards">
+<!-- <div class="cards"> -->
 
-  <div class="card-category">
-    <%= image_tag "femme_avant_apres.jpeg", alt:"Femme" %>
-  </div>
-<!--   <div class="card-category">
-    <#%= image_tag "maison_avant" %>
-  </div>
-  <div class="card-category">
-    <#%= image_tag "maison_apres" %>
-  </div> -->
-    <div class="box">
-    <div class="box-inner">
-      <div class="box-front">
-        <div class="card-category">
-          <%= image_tag "maison_avant" %>
-        </div>
-      </div>
-      <div class="box-back">
-        <div class="card-category">
-        <%= image_tag "maison_apres" %>
-        </div>
-      </div>
+<div class="galerie depoussierage">
+  <h3>Dépoussiérage</h3>
+  <div class="depoussierage_img">
+    <div class="card-category">
+      <%= image_tag "depoussierage/eponge_bleue.jpg" %>
+      <%= image_tag "depoussierage/IMG_9509.JPG" %>
+      <!-- <figcaption>Caption goes here</figcaption> -->
     </div>
   </div>
-  <div class="card-category">
-    <%= image_tag "Chiens" %>
-  </div>
-  <div class="card-category">
-    <%= image_tag "methode1.jpeg" %>
-  </div>
-  <div class="card-category">
-    <%= image_tag "methode2.jpeg" %>
-  </div>
-  <div class="card-category">
-    <%= image_tag "methode3.jpeg" %>
-  </div>
-  <div class="card-category">
-    <%= image_tag "methode4.jpeg" %>
-  </div>
-  <div class="card-category">
-    <%= image_tag "eponge bleu (1)" %>
-  </div>
-
 </div>
+
+<div class="galerie refixage">
+  <h3>Refixage</h3>
+  <div class="refixage_img">
+    <div class="card-category">
+      <%= image_tag "REFIXAGE/IMG_7878.JPG" %>
+      <%= image_tag "REFIXAGE/IMG_8747.JPG" %>
+      <%= image_tag "REFIXAGE/refixage 1.jpg" %>
+    </div>
+  </div>
+</div>
+
+<div class="galerie reprise_dechirure">
+  <h3>Reprise de déchirures</h3>
+  <div class="reprise_dechirure_img">
+    <div class="card-category">
+      <%= image_tag "REPRISE_DECHIRURES/IMG_0542.JPG" %>
+      <%= image_tag "REPRISE_DECHIRURES/IMG_0101.JPG" %>
+      <%= image_tag "REPRISE_DECHIRURES/IMG_1316.JPG" %>
+      <%= image_tag "REPRISE_DECHIRURES/IMG_9784.JPG" %>
+      <%= image_tag "REPRISE_DECHIRURES/IMG_1694.JPG" %>
+    </div>
+  </div>
+</div>
+
+<div class="galerie mastics">
+  <h3>Mastics de fond et de forme</h3>
+  <div class="mastic_img">
+    <div class="card-category">
+      <%= image_tag "MASTICS/IMG_1372.JPG" %>
+      <%= image_tag "MASTICS/IMG_4482.JPG" %>
+      <%= image_tag "MASTICS/IMG_1252.JPG" %>
+      <%= image_tag "MASTICS/IMG_1493.JPG" %>
+      <%= image_tag "MASTICS/IMG_1690.JPG" %>
+    </div>
+  </div>
+</div>
+
+<div class="galerie nettoyage">
+  <h3>Nettoyage</h3>
+  <div class="nettoyage_img">
+    <div class="card-category">
+      <%= image_tag "NETTOYAGE/IMG_8682.JPG" %>
+      <%= image_tag "NETTOYAGE/IMG_9517.JPG" %>
+      <%= image_tag "NETTOYAGE/IMG_9526.JPG" %>
+    </div>
+  </div>
+</div>
+
+<div class="galerie retouche">
+  <h3>Retouches</h3>
+  <div class="retouche_img">
+    <div class="card-category">
+      <%= image_tag "RETOUCHES/IMG_1239.JPG" %>
+      <%= image_tag "RETOUCHES/IMG_1685.JPG" %>
+    </div>
+  </div>
+</div>
+
+<div class="galerie avant_apres">
+  <h3>Avant / Après</h3>
+  <div class="avant_apres_img">
+    <div class="card-category">
+      <%= image_tag "AVANT:APRES/IMG_0748.JPG" %>
+      <%= image_tag "AVANT:APRES/IMG_0854.JPG" %>
+      <%= image_tag "AVANT:APRES/Paysage_avant.jpg" %>
+      <%= image_tag "AVANT:APRES/Paysage_apres.jpg" %>
+    </div>
+  </div>
+</div>
+
+<!--
+        <div class="box">
+          <div class="box-inner">
+            <div class="box-front">
+              <div class="card-category">
+                <#%= image_tag "AVANT:APRES/IMG_0748.JPG" %>
+              </div>
+            </div>
+            <div class="box-back">
+              <div class="card-category">
+              <#%= image_tag "AVANT:APRES/IMG_0854.JPG" %>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+
+<!-- </div> -->
